--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ body {
 }
 
 #title_cr_big {
-    color: red/*rgb(255, 255, 255)*/;
+    color: rgb(255, 255, 255);
     font-size: 10vw;
     text-transform: uppercase;
 
@@ -1335,7 +1335,7 @@ body {
     .main {
         left: 0;
         top: -100%;
-        background: red/*rgba(0,0,0,1)*/;
+        background:rgba(0,0,0,1);
         width: 100%;
         height: 100%;
         position: fixed;
